==> wuxx/nanoCH32H417/doc/EVT/EXAM/PIOC/PIOC_Single_Wire/Common/hardware.c <==
#include "hardware.h"
#include "string.h"
#include "ch32h417_pioc.h"
#define  Timebase_def  1
#define    Timebase_2X  Timebase_def

void PIOC_IRQHandler( void )
{
    if((R8_SYS_CFG&RB_INT_REQ)!=RESET)
    {
        if((R8_DATA_REG0&0x08)!=RESET)
        {
            Send_BUF_ADDR++;
            Send_RemainLEN--;
            if(Send_RemainLEN)
            {
                R32_DATA_REG4_7 = *Send_BUF_ADDR;
                R8_DATA_REG0 &= ~(0x04);
                R8_CTRL_WR = 0X33;
            }
            else
                R8_DATA_REG0 &= ~(0x40);
        }
        else
        {
            *Receive_BUF_ADDR = R32_DATA_REG4_7;
            Receive_BUF_ADDR++;
            Receive_RemainLEN--;
            R8_DATA_REG0 &= ~(0x04);
            if(Receive_RemainLEN)
                R8_CTRL_WR = 0X33;
            else
                R8_DATA_REG0 &= ~(0x40);
        }
        R8_CTRL_RD=11;
    }
}

void Hardware(void)
{
    uint16_t i=0;

    GPIO_Toggle_INIT();
    PIOC_INIT();
    PIOC_Single_Wire_INIT();
    PIOC_Single_Wire_Pause();

    for(int k=0;k<16;k++)
    {
        PIOC_Single_Wire_RAM_SingleWrite(0x20000000+k*4,pbuf1[k],2);
        PIOC_Single_Wire_RAM_SingleRead(0x20000000+k*4,buf,2);
        printf("%08x\r\n",buf[0]);
    }

    PIOC_Single_Wire_Exit_Pause();

    while(1)
    {
        Delay_Ms(500);
        GPIO_WriteBit(GPIOA, GPIO_Pin_0, (i == 0) ? (i = Bit_SET) : (i = Bit_RESET));
    }
}
