==> wuxx/nanoCH32H417/doc/EVT/EXAM/PIOC/PIOC_IIC/Common/hardware.c <==
#include "hardware.h"
#include "string.h"
#include "ch32h417_pioc.h"
#define HOST_MODE     0
#define SLAVE_MODE    1
#define I2C_MODE      HOST_MODE
#define     IIC_SFR_ADDR1  ((uint8_t *)&(PIOC->D8_DATA_REG8))
#define     IIC_SFR_ADDR2  ((uint8_t *)&(PIOC->D8_DATA_REG16))
#define     IIC_SFR_ADDR3  ((uint8_t *)&(PIOC->D8_DATA_REG24))
#define   R16_DATA_REG4_5  (*((volatile unsigned short *)(PIOC_SFR_BASE+0x24))) // RW/RW, data buffer 4~5
#define     PIOC_TIM_PSC2      ((uint8_t)0x07)
#define     PIOC_TIM_PSC4      ((uint8_t)0x06)
#define     PIOC_TIM_PSC8      ((uint8_t)0x05)
#define     PIOC_TIM_PSC16     ((uint8_t)0x04)
#define     PIOC_TIM_PSC32     ((uint8_t)0x03)
#define     PIOC_TIM_PSC128    ((uint8_t)0x02)
#define     PIOC_TIM_PSC512    ((uint8_t)0x01)
#define     PIOC_TIM_PSC2048   ((uint8_t)0x00)

void PIOC_IRQHandler( void )
{
    uint8_t *addr_target = NULL;
    uint8_t *addr_data = NULL;
    uint8_t data_len = 0;
    if((R8_SYS_CFG&RB_INT_REQ)!=RESET)
    {
        //Data read mode
        if((R8_DATA_REG3 & 0X01)!=RESET)
        {
            addr_target = PIOC_IIC_BUF_ADDR0;
            if(PIOC_IIC_FLAG==1)
            {
                addr_data = IIC_SFR_ADDR1;
                PIOC_IIC_FLAG=2;
            }
            else if(PIOC_IIC_FLAG==2)
            {
                addr_data = IIC_SFR_ADDR2;
                PIOC_IIC_FLAG=1;
            }
            if(PIOC_IIC_RemainLEN0>8)
            {
                if((R8_DATA_REG6 & 0x04)!=RESET)
                    data_len = 8-R8_DATA_REG7;
                else
                    data_len = 8;
                PIOC_IIC_BUF_ADDR0 += 8;
                PIOC_IIC_RemainLEN0 -= 8;
            }
            else if(PIOC_IIC_RemainLEN0>0)
            {
                if((R8_DATA_REG6 & 0x04)!=RESET)
                    data_len = 8-R8_DATA_REG7;
                else
                    data_len = PIOC_IIC_RemainLEN0;
                PIOC_IIC_RemainLEN0 = 0;
                PIOC_IIC_FLAG = 0;
                PIOC_IIC_BUF_ADDR0 = NULL;
            }

        }
        //Data write Mode
        else
        {
            addr_data = PIOC_IIC_BUF_ADDR1;
            if(PIOC_IIC_FLAG==1)
            {
                addr_target = IIC_SFR_ADDR1;
                PIOC_IIC_FLAG=2;
            }
            else if(PIOC_IIC_FLAG==2)
            {
                addr_target = IIC_SFR_ADDR2;
                PIOC_IIC_FLAG=1;
            }
            if(PIOC_IIC_RemainLEN1>8)
            {
                data_len = 8;
                PIOC_IIC_BUF_ADDR1 += 8;
                PIOC_IIC_RemainLEN1 -= 8;
            }
            else if(PIOC_IIC_RemainLEN1>0)
            {
                data_len = PIOC_IIC_RemainLEN1;
                PIOC_IIC_RemainLEN1 = 0;
                PIOC_IIC_FLAG = 0;
                PIOC_IIC_BUF_ADDR1 = NULL;
            }
        }
        memcpy( addr_target, addr_data, data_len );
        //Slave reception completed or transmission completed,
        if((R8_DATA_REG6 & 0x04)!=RESET)
        {
            R8_DATA_REG6 &= ~(0X04);
            //Rewrite the data to be sent and received
            PIOC_IIC_SLAVE(PIOC_IIC_BUF_ADDR3,PIOC_IIC_RemainLEN3,PIOC_IIC_BUF_ADDR2,PIOC_IIC_RemainLEN2);
        }
        R8_CTRL_RD=11;    // False write any value to R8_CTRL_RD, clear interrupt flag
    }

}

void Hardware(void)
{
    int j=0;

    PIOC_INIT();
    PIOC_IIC_INIT(120-1, PIOC_TIM_PSC2, 0X332);    //  100M/2/120=417K
#if( I2C_MODE == HOST_MODE )
    PIOC_IIC_SEND(pbuf1,sizeof(pbuf1));
    Delay_Ms(100);
    PIOC_IIC_Receive(rx_buf,32);
    Delay_Ms(100);
#elif ( I2C_MODE == SLAVE_MODE )
    PIOC_IIC_SLAVE(pbuf1,sizeof(pbuf1),rx_buf,100);
    Delay_Ms(1000);
#endif
    for(j=0;j<32;j++)
    {
        printf("%x\r\n",rx_buf[j]);
    }
    while(1);
}
